// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Game Default 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
      <div
        className="board-row"
      >
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
        <button
          className="square"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="game-info"
  >
    <div>
      Next player: X
    </div>
    <ol>
      <li>
        <button
          onClick={[Function]}
        >
          Go to game start
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Storyshots Square Cho 1`] = `
<button
  className="square"
>
  丁
</button>
`;

exports[`Storyshots Square Circle 1`] = `
<button
  className="square"
>
  O
</button>
`;

exports[`Storyshots Square Default 1`] = `
<button
  className="square"
/>
`;

exports[`Storyshots Square Han 1`] = `
<button
  className="square"
>
  半
</button>
`;

exports[`Storyshots Square Triangle 1`] = `
<button
  className="square"
>
  △
</button>
`;

exports[`Storyshots Square X 1`] = `
<button
  className="square"
>
  X
</button>
`;
